--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -19,7 +19,7 @@ jobs:
     
     - name: Build
       run: |
-        npm start
+        npm run build
     
     - name: Deploy to Firebase
       run: |
