--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - with:
+      with:
          persist-credentials: false
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
